--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "date-fns": "^2.24.0",
     "framer-motion": "^4",
     "next": "11.0.1",
+    "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
