--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "react/display-name": "off"
   },
   "env": {
     "jest": true
