--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": "^11.1.1",
+    "next-router-mock": "^0.5.1",
     "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "4.3.5"
