--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@prismicio/client": "^5.1.0",
     "date-fns": "^2.24.0",
     "framer-motion": "^4",
     "next": "11.0.1",
     "popmotion": "^9.4.0",
+    "prismic-reactjs": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
