--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@emotion/styled": "^11",
     "@prismicio/client": "^5.1.0",
     "date-fns": "^2.24.0",
+    "flickity": "^2.2.2",
     "framer-motion": "^4",
     "next": "11.0.1",
     "popmotion": "^9.4.0",
     "prismic-reactjs": "^1.3.4",
+    "ramda": "^0.27.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-flickity-component": "^3.6.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/ramda": "^0.27.45",
     "@types/react": "17.0.15",
+    "@types/react-slick": "^0.23.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "babel-jest": "^27.0.6",
     "eslint": "7.32.0",
