--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^2.24.0",
     "flickity": "^2.2.2",
     "framer-motion": "^4",
-    "next": "11.0.1",
+    "next": "^11.1.2",
     "popmotion": "^9.4.0",
     "prismic-reactjs": "^1.3.4",
     "ramda": "^0.27.1",
