--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "@emotion/styled": "^11",
     "@prismicio/client": "^5.1.0",
     "date-fns": "^2.24.0",
-    "flickity": "^2.2.2",
     "framer-motion": "^4",
     "next": "^11.1.2",
     "popmotion": "^9.4.0",
     "prismic-reactjs": "^1.3.4",
     "ramda": "^0.27.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-flickity-component": "^3.6.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
