--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/gtag.js": "^0.0.7",
     "@types/ramda": "^0.27.45",
     "@types/react": "17.0.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
